--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,11 @@ dependencies:
     sdk: flutter
   qr_code_scanner: ^0.0.13
   device_info: ^0.4.2+4
+  provider: ^4.3.1
+  firebase_core: ^0.4.5
+  cloud_firestore: ^0.13.7
+  firebase_messaging: ^6.0.16
+  flutter_secure_storage: ^3.3.3
 
 dev_dependencies:
   flutter_test:
