chore: Replace and add shared preferences

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   firebase_core: ^0.4.5
   cloud_firestore: ^0.13.7
   firebase_messaging: ^6.0.16
-  flutter_secure_storage: ^3.3.3
+  shared_preferences: ^0.5.8
 
 dev_dependencies:
   flutter_test:
